--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
 <body>
     <img id="app-img">
     <h1 id="app-name"></h1>
-    <a href="https://itunes.apple.com/app/id324684580?mt=8" class="btn">Download App</a>
+    <a href="http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888" class="btn">Download App</a>
     <p>Please press the button to proceed to your app</p>
     <script>
 window.location.href = 'http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888';
