--- a/store.html
+++ b/store.html
@@ -10,6 +10,4 @@
     <h1 id="app-name"></h1>
     <a href="http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888" class="btn">Download App</a>
     <p>Please press the button to proceed to your app</p>
-    <script>
-window.location.href = 'http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888';
-    </script></body></html>
+</body></html>
