--- a/store.html
+++ b/store.html
@@ -8,6 +8,6 @@
 <body>
     <img id="app-img">
     <h1 id="app-name"></h1>
-    <a href="http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888" class="btn">Download App2</a>
+    <a href="http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888" class="btn">ダウンロードする</a>
     <p>Please press the button to proceed to your app</p>
 </body></html>
