--- a/store.html
+++ b/store.html
@@ -3,11 +3,13 @@
     <title>Proceed to the app store</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width initial-scale=1">
-    <style type="text/css">body{background-color:Gray;font-family:"Maven",Sans,sans-serif;text-align:center}img{border-radius:26px;box-shadow:0 0 3px Black ;height:auto;margin-top:15vh;max-width:100px;width:100%}h1{color:#575757 ;font-size:1.2em;margin-bottom:5vh}.btn{background-color:#balack ;border:2px solid #00bed5 ;color:#fff;display:inline-block;font-weight:700;letter-spacing: 0.1em;max-width:200px;padding:10px;text-decoration:none;text-transform:uppercase;transition:all .3s ease-in-out;width:80%}p{color:#b8b8b8 ;margin-top:5vh;padding:0 20px}</style>
+    <style type="text/css">body{background-color: #f1f1f1 ;font-family:"Maven",Sans,sans-serif;text-align:center}img{border-radius:26px;box-shadow:0 0 3px #b8b8b8 ;height:auto;margin-top:15vh;max-width:100px;width:100%}h1{color:#575757 ;font-size:1.2em;margin-bottom:5vh}.btn{background-color:#00bed5 ;border:2px solid #00bed5 ;color:#fff;display:inline-block;font-weight:700;letter-spacing: 0.1em;max-width:200px;padding:10px;text-decoration:none;text-transform:uppercase;transition:all .3s ease-in-out;width:80%}p{color:#b8b8b8 ;margin-top:5vh;padding:0 20px}</style>
 </head>
 <body>
     <img id="app-img">
     <h1 id="app-name"></h1>
-    <a href="http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888" class="btn">ダウンロードする</a>
-    <p>Please press the button to proceed to your app</p>
-</body></html>
+    <a href="https://itunes.apple.com/app/id324684580?mt=8" class="btn">ダウンロードする</a>
+    <p>アプリダウンロードに進むにはボタンを押してください</p>
+    <script>
+window.location.href = 'https://itunes.apple.com/app/id324684580?mt=8';
+    </script></body></html>
