--- a/store.html
+++ b/store.html
@@ -8,8 +8,6 @@
 <body>
     <img id="app-img">
     <h1 id="app-name"></h1>
-    <a href="https://itunes.apple.com/app/id324684580?mt=8" class="btn">ダウンロードする</a>
+    <a href="http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888" class="btn">ダウンロードする</a>
     <p>アプリダウンロードに進むにはボタンを押してください</p>
-    <script>
-window.location.href = 'https://itunes.apple.com/app/id324684580?mt=8';
-    </script></body></html>
+</body></html>
