--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <script type='text/javascript'>
       location.replace('tpp://?_xroute=2&_xuid=xfoxGHBtC1hJ9zY&package=jp/app/dong-jingpakupedia/id573435943&referrer=_xroute%3DWA_XUID%26_xuid%3DxfoxGHBtC1hJ9zY');
-      setTimeout(function() { location.replace('https://haradayoshitsugucz.github.io/store.html'); },  parseInt(new URLSearchParams(window.location.search).get("timeout"))); 
+      setTimeout(function() { location.replace('./store.html'); },  parseInt(new URLSearchParams(window.location.search).get("timeout"))); 
     </script>
   </head>
   <body>hola amigo !</body>
