--- a/new/store.html
+++ b/new/store.html
@@ -8,7 +8,7 @@
   window.onload = function() {
     var rurl = new URLSearchParams(window.location.search).get("rurl")
     alert(rurl);
-    document.getElementById("searchLink").href = rurl;
+    document.getElementById("downloadLink").href = rurl;
 
   }
   -->
