--- a/new/store.html
+++ b/new/store.html
@@ -3,7 +3,7 @@
   <title>Proceed to the app store</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <style type="text/css">body{background-color: #f1f1f1 ;font-family:"Maven",Sans,sans-serif;text-align:center}img{border-radius:26px;box-shadow:0 0 3px #b8b8b8 ;height:auto;margin-top:15vh;max-width:100px;width:100%}h1{color:#575757 ;font-size:1.2em;margin-bottom:5vh}.btn{background-color:#00bed5 ;border:2px solid #00bed5 ;color:#fff;display:inline-block;font-weight:700;letter-spacing: 0.1em;max-width:200px;padding:10px;text-decoration:none;text-transform:uppercase;transition:all .3s ease-in-out;width:80%}p{color:#b8b8b8 ;margin-top:5vh;padding:0 20px}</style>
+  <style type="text/css">body{background-color: #FFFFFF ;font-family:"Maven",Sans,sans-serif;text-align:center}img{border-radius:26px;box-shadow:0 0 3px #b8b8b8 ;height:auto;margin-top:15vh;max-width:100px;width:100%}h1{color:#575757 ;font-size:1.2em;margin-bottom:5vh}.btn{background-color:#00bed5 ;border:2px solid #00bed5 ;color:#fff;display:inline-block;font-weight:700;letter-spacing: 0.1em;max-width:200px;padding:10px;text-decoration:none;text-transform:uppercase;transition:all .3s ease-in-out;width:80%}p{color:#b8b8b8 ;margin-top:5vh;padding:0 20px}</style>
   <script type='text/javascript'><!--
   window.onload = function() {
     var rurl = new URLSearchParams(window.location.search).get("rurl")
