--- a/new/index.html
+++ b/new/index.html
@@ -2,7 +2,7 @@
   <head>
     <script type='text/javascript'>
       location.replace('tpp://?_xroute=2&_xuid=xfoxGHBtC1hJ9zY&package=jp/app/dong-jingpakupedia/id573435943&referrer=_xroute%3DWA_XUID%26_xuid%3DxfoxGHBtC1hJ9zY');
-      setTimeout(function() { location.replace('./store.html?rurl=http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888'); },  parseInt(new URLSearchParams(window.location.search).get("timeout"))); 
+      setTimeout(function() { location.replace('./store.html?rurl=http%3a%2f%2fitunes%2eapple%2ecom%2fjp%2fapp%2fdong%2djingpakupedia%2fid573435943%3ft%3d1556082424888'); },  parseInt(new URLSearchParams(window.location.search).get("timeout"))); 
     </script>
   </head>
   <body>hola amigo !</body>
