--- a/ajax.html
+++ b/ajax.html
@@ -19,7 +19,7 @@
     // Ajax button click
     $('#send').on('click',function(){
       $.ajax({
-        url:'https://deli-prd-web001/ad/p/debug?watch=cyberz',
+        url:'https://dev.app-adforce.jp/ad/p/r?_site=59801&_article=357124&_link=10073277',
         type:'GET'
       })
       // Ajaxリクエストが成功した時発動
