--- a/ajax.html
+++ b/ajax.html
@@ -19,7 +19,7 @@
     // Ajax button click
     $('#send').on('click',function(){
       $.ajax({
-        url:'https://c1.app-adforce.jp/ad/p/r?_site=34659&_article=358722&_link=10117942&rd=1',
+        url:'https://stg.app-adforce.jp/ad/p/r?_site=30645&_article=187171&_link=10000160ccc=1&rd=1',
         type:'GET'
       })
       // Ajaxリクエストが成功した時発動
