--- a/ajax.html
+++ b/ajax.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<form id="form_1" method="post" accept-charset="utf-8" return false>
+<form id="form_1" method="get" accept-charset="utf-8" return false>
   <p>URL <input type="text" name = "url" id ="url"> </p>
 </form>
 
