--- a/ajax.html
+++ b/ajax.html
@@ -8,7 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <H1>
 <form id="form_1" method="get" accept-charset="utf-8" return false>
-  <p>URL <input type="text" size="300" name = "url" id ="url" value="https://stg.app-adforce.jp/ad/p/r?_site=30700&_article=379648&_link=10987464ccc=1&_nored=1"> </p>
+  <p>URL <input type="text" size="300" name = "url" id ="url" value="https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467"> </p>
 </form>
 
 <button id="send">ajax</button>
