--- a/xhr.html
+++ b/xhr.html
@@ -1,4 +1,18 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+<script type="text/javascript">
 var xhr = new XMLHttpRequest();
 xhr.open('GET', 'https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467');
 xhr.addEventListener('load', onLoadFunc, false);
 xhr.send(null);
+</script>
+</body>
+</html>
+
+
+
