--- a/xhr.html
+++ b/xhr.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <script type="text/javascript">
+function onLoadFunc () {
+  console.log('load....');
+}
 var xhr = new XMLHttpRequest();
 xhr.open('GET', 'https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467&xhr=1');
 xhr.addEventListener('load', onLoadFunc, false);
