--- a/xhr.html
+++ b/xhr.html
@@ -11,6 +11,8 @@ function onLoadFunc () {
 }
 var xhr = new XMLHttpRequest();
 xhr.open('GET', 'https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467&xhr=1');
+xhr.setRequestHeader('X-MyRequest', 'this-is-cors-test');
+xhr.setRequestHeader('X-MyOption', 'my-option');
 xhr.addEventListener('load', onLoadFunc, false);
 xhr.send(null);
 </script>
