--- a/xhr.html
+++ b/xhr.html
@@ -10,7 +10,7 @@ function onLoadFunc () {
   console.log('load....');
 }
 var xhr = new XMLHttpRequest();
-xhr.open('GET', 'https://c1.app-adforce.jp/ad/p/r?_site=58076&_article=348895&_link=9805550');
+xhr.open('GET', 'https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467');
 xhr.setRequestHeader('X-MyRequest', 'this-is-cors-test');
 xhr.setRequestHeader('X-MyOption', 'my-option');
 xhr.addEventListener('load', onLoadFunc, false);
