--- a/ajax.html
+++ b/ajax.html
@@ -1,46 +1,106 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
+
 <body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<H1>
-<form id="form_1" method="get" accept-charset="utf-8" return false>
-  <p>URL <input type="text" size="300" name = "url" id ="url" value="https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467"> </p>
-</form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    
+    <form id="form_dev" method="get" accept-charset="utf-8" return false>
+        <p>dev<input type="text" size="300" name="dev_url" id="dev_url"
+                value="https://dev.app-adforce.jp/ad/p/r?_site=61038&_article=363984&_link=10358905&dev=1"> </p>
+    </form>
+    <button id="send_dev>ajax</button>
 
-<button id="send">ajax</button>
-<div class="result"></div>
-</H1>
-  
-<script type="text/javascript">
+    <form id="form_stg" method="get" accept-charset="utf-8" return false>
+        <p>dev<input type="text" size="300" name="stg_url" id="stg_url"
+                value="https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467&stg=1"> </p>
+    </form>
+    <button id="send_stg">ajax</button>
 
-  $(function(){
-    // Ajax button click
-    $('#send').on('click',function(){
-      $.ajax({
-        url:$('#url').val(),
-        type:'GET'
-      })
-      // Ajaxリクエストが成功した時発動
-          .done( (data) => {
-            $('.result').html(data);
-            console.log(data);
-          })
-          // Ajaxリクエストが失敗した時発動
-          .fail( (data) => {
-            $('.result').html(data);
-            console.log(data);
-          })
-          // Ajaxリクエストが成功・失敗どちらでも発動
-          .always( (data) => {
+    <form id="form_prd" method="get" accept-charset="utf-8" return false>
+        <p>dev<input type="text" size="300" name="prd_url" id="prd_url"
+                value="https://c1.app-adforce.jp/ad/p/r?_site=58076&_article=348895&_link=9805550&prd=1"> </p>
+    </form>
+    <button id="send_prd">ajax</button>
+    
+    <div class="result"></div>
 
-          });
-    });
-  });
+    <script type="text/javascript">
 
-</script>
+        $(function () {
+            // Ajax button click
+            $('#send_dev').on('click', function () {
+                $.ajax({
+                    url: $('#dev_url').val(),
+                    type: 'GET'
+                })
+                    // Ajaxリクエストが成功した時発動
+                    .done((data) => {
+                        $('.result').html(data);
+                        console.log(data);
+                    })
+                    // Ajaxリクエストが失敗した時発動
+                    .fail((data) => {
+                        $('.result').html(data);
+                        console.log(data);
+                    })
+                    // Ajaxリクエストが成功・失敗どちらでも発動
+                    .always((data) => {
+
+                    });
+            });
+
+            // Ajax button click
+            $('#send_stg').on('click', function () {
+                $.ajax({
+                    url: $('#stg_url').val(),
+                    type: 'GET'
+                })
+                    // Ajaxリクエストが成功した時発動
+                    .done((data) => {
+                        $('.result').html(data);
+                        console.log(data);
+                    })
+                    // Ajaxリクエストが失敗した時発動
+                    .fail((data) => {
+                        $('.result').html(data);
+                        console.log(data);
+                    })
+                    // Ajaxリクエストが成功・失敗どちらでも発動
+                    .always((data) => {
+
+                    });
+            });
+
+            // Ajax button click
+            $('#send_prd').on('click', function () {
+                $.ajax({
+                    url: $('#prd_url').val(),
+                    type: 'GET'
+                })
+                    // Ajaxリクエストが成功した時発動
+                    .done((data) => {
+                        $('.result').html(data);
+                        console.log(data);
+                    })
+                    // Ajaxリクエストが失敗した時発動
+                    .fail((data) => {
+                        $('.result').html(data);
+                        console.log(data);
+                    })
+                    // Ajaxリクエストが成功・失敗どちらでも発動
+                    .always((data) => {
+
+                    });
+            });
+
+        });
+
+    </script>
 </body>
+
 </html>
