--- a/ajax.html
+++ b/ajax.html
@@ -16,13 +16,13 @@
     <button id="send_dev>ajax</button>
 
     <form id="form_stg" method="get" accept-charset="utf-8" return false>
-        <p>dev<input type="text" size="300" name="stg_url" id="stg_url"
+        <p>stg<input type="text" size="300" name="stg_url" id="stg_url"
                 value="https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467&stg=1"> </p>
     </form>
     <button id="send_stg">ajax</button>
 
     <form id="form_prd" method="get" accept-charset="utf-8" return false>
-        <p>dev<input type="text" size="300" name="prd_url" id="prd_url"
+        <p>prd<input type="text" size="300" name="prd_url" id="prd_url"
                 value="https://c1.app-adforce.jp/ad/p/r?_site=58076&_article=348895&_link=9805550&prd=1"> </p>
     </form>
     <button id="send_prd">ajax</button>
