--- a/ajax.html
+++ b/ajax.html
@@ -9,6 +9,7 @@
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
+    <p>DEV</p>
     <form id="form_dev" method="get" accept-charset="utf-8" return false>
     <input type="text" size="300" name="dev_url" id="dev_url"
     value="https://dev.app-adforce.jp/ad/p/r?_site=61038&_article=363984&_link=10358905&dev=1" />
@@ -16,6 +17,7 @@
     <button id="send_dev">ajax</button>
     <br/>
 
+    <p>STG</p>
     <form id=" form_stg" method="get" accept-charset="utf-8" return false>
     <input type="text" size="300" name="stg_url" id="stg_url"
     value="https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467&stg=1" />
@@ -23,7 +25,7 @@
     <button id="send_stg">ajax</button>                                                                                      
     <br/>
 
-
+    <p>PRD</p>
     <form id="form_prd" method="get" accept-charset="utf-8" return false>
     <input type="text" size="300" name="prd_url" id="prd_url"
     value="https://c1.app-adforce.jp/ad/p/r?_site=58076&_article=348895&_link=9805550&prd=1" />
