--- a/ajax.html
+++ b/ajax.html
@@ -43,7 +43,7 @@
                     $.ajax({
                         url: $('#dev_url').val(),
                         headers: {
-                            "x_test_header1" : x_test_value1
+                            'x_test_header1' : 'x_test_value1'
                         },
                         type: 'GET'
                     })
@@ -68,7 +68,7 @@
                     $.ajax({
                         url: $('#stg_url').val(),
                         headers: {
-                            "x_test_header1" : x_test_value1
+                            'x_test_header1' : 'x_test_value1'
                         },
                         type: 'GET'
                     })
@@ -93,7 +93,7 @@
                     $.ajax({
                         url: $('#prd_url').val(),
                         headers: {
-                            "x_test_header1" : x_test_value1
+                            'x_test_header1' : 'x_test_value1'
                         },
                         type: 'GET'
                     })
