--- a/ajax.html
+++ b/ajax.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://stg.app-adforce.jp/ad/js/jquery-2.0.2.min.js"></script>
 
     <p>DEV</p>
     <form id="form_dev" method="get" accept-charset="utf-8" return false>
