--- a/ajax.html
+++ b/ajax.html
@@ -74,10 +74,7 @@
                     })
                         // Ajaxリクエストが成功した時発動
                         .done((data) => {
-                            $('.result').html(data);
-                            $.ajax({
-                                url: data,
-                            })
+                            $('.result').append(data);
                             console.log(data);
                         })
                         // Ajaxリクエストが失敗した時発動
