--- a/ajax.html
+++ b/ajax.html
@@ -33,9 +33,7 @@
     <button id="send_prd">ajax</button>
     <br/>
 
-        <iframe id="result" src="result.html" width="700" height="300">
-
-        </iframe>
+        <div class="result"></div>
 
         <script type="text/javascript">
 
@@ -76,8 +74,7 @@
                     })
                         // Ajaxリクエストが成功した時発動
                         .done((data) => {
-                            $('#result').html("");
-                            $('#result').html(data);
+                            $('.result').html(data);
                             console.log(data);
                         })
                         // Ajaxリクエストが失敗した時発動
