--- a/ajax.html
+++ b/ajax.html
@@ -33,7 +33,7 @@
     <button id="send_prd">ajax</button>
     <br/>
 
-        <iframe id="result" srcdoc='<p>ここに埋め込むHTML文書を記載</p>'>
+        <iframe id="result" srcdoc=''>
         </iframe>
 
         <script type="text/javascript">
