--- a/ajax.html
+++ b/ajax.html
@@ -33,8 +33,7 @@
     <button id="send_prd">ajax</button>
     <br/>
 
-        <iframe id="result" srcdoc="">
-        </iframe>
+        <iframe id="result" srcdoc="" />
 
         <script type="text/javascript">
 
