--- a/ajax.html
+++ b/ajax.html
@@ -33,7 +33,7 @@
     <button id="send_prd">ajax</button>
     <br/>
 
-        <iframe id="result" srcdoc="" style="visibility: hidden;" />
+        <iframe id="result" srcdoc="" style="width:0;height:0;border:0; border:none;" />
 
         <script type="text/javascript">
 
