--- a/ajax.html
+++ b/ajax.html
@@ -33,7 +33,7 @@
     <button id="send_prd">ajax</button>
     <br/>
 
-        <iframe id="result" srcdoc="">
+        <iframe id="result" srcdoc="<html></html>" style="width:0;height:0;border:0; border:none;" >
         </iframe>
 
         <script type="text/javascript">
