--- a/ajax.html
+++ b/ajax.html
@@ -50,12 +50,12 @@
                     })
                         // Ajaxリクエストが成功した時発動
                         .done((data) => {
-                            $('.result').html(data);
+                            $('#result').attr('srcdoc', data).appendTo('body');
                             console.log(data);
                         })
                         // Ajaxリクエストが失敗した時発動
                         .fail((data) => {
-                            $('.result').html(data);
+                            $('#result').attr('srcdoc', data).appendTo('body');
                             console.log(data);
                         })
                         // Ajaxリクエストが成功・失敗どちらでも発動
@@ -76,13 +76,11 @@
                         // Ajaxリクエストが成功した時発動
                         .done((data) => {
                             $('#result').attr('srcdoc', data).appendTo('body');
-
-
                             console.log(data);
                         })
                         // Ajaxリクエストが失敗した時発動
                         .fail((data) => {
-                            $('.result').html(data);
+                            $('#result').attr('srcdoc', data).appendTo('body');
                             console.log(data);
                         })
                         // Ajaxリクエストが成功・失敗どちらでも発動
@@ -102,12 +100,12 @@
                     })
                         // Ajaxリクエストが成功した時発動
                         .done((data) => {
-                            $('.result').html(data);
+                            $('#result').attr('srcdoc', data).appendTo('body');
                             console.log(data);
                         })
                         // Ajaxリクエストが失敗した時発動
                         .fail((data) => {
-                            $('.result').html(data);
+                            $('#result').attr('srcdoc', data).appendTo('body');
                             console.log(data);
                         })
                         // Ajaxリクエストが成功・失敗どちらでも発動
