--- a/ajax.html
+++ b/ajax.html
@@ -68,6 +68,10 @@
                 $('#send_stg').on('click', function () {
                     $.ajax({
                         url: $('#stg_url').val(),
+                        headers: {
+                            'x_test_header1' : 'x_test_value1'
+                        },
+                        crossDomain: true,
                         type: 'GET'
                     })
                         // Ajaxリクエストが成功した時発動
