--- a/ajax.html
+++ b/ajax.html
@@ -69,7 +69,8 @@
                     $.ajax({
                         url: $('#stg_url').val(),
                         headers: {
-                            'x_test_header1' : 'x_test_value1'
+                            'x_test_header1' : 'x_test_value1',
+                            'x_test_header2' : 'x_test_value2'
                         },
                         crossDomain: true,
                         type: 'GET'
