--- a/ajax.html
+++ b/ajax.html
@@ -44,7 +44,8 @@
                     $.ajax({
                         url: $('#dev_url').val(),
                         headers: {
-                            'x_test_header1' : 'x_test_value1'
+                            'x_test_header1' : 'x_test_value1',
+                            'x_test_header2' : 'x_test_value2'
                         },
                         type: 'GET'
                     })
@@ -96,7 +97,8 @@
                     $.ajax({
                         url: $('#prd_url').val(),
                         headers: {
-                            'x_test_header1' : 'x_test_value1'
+                            'x_test_header1' : 'x_test_value1',
+                            'x_test_header2' : 'x_test_value2'
                         },
                         type: 'GET'
                     })
