--- a/ajax.html
+++ b/ajax.html
@@ -78,7 +78,7 @@
                     })
                         // Ajaxリクエストが成功した時発動
                         .done((data) => {
-                            $('#result').attr('srcdoc', data).appendTo('body');
+                            //$('#result').attr('srcdoc', data).appendTo('body');
                             console.log(data);
                         })
                         // Ajaxリクエストが失敗した時発動
