--- a/ajax.html
+++ b/ajax.html
@@ -69,11 +69,11 @@
                 $('#send_stg').on('click', function () {
                     $.ajax({
                         url: $('#stg_url').val(),
-                        headers: {
-                            'x_test_header1' : 'x_test_value1',
-                            'x_test_header2' : 'x_test_value2'
-                        },
-                        crossDomain: true,
+//                         headers: {
+//                             'x_test_header1' : 'x_test_value1',
+//                             'x_test_header2' : 'x_test_value2'
+//                         },
+//                         crossDomain: true,
                         type: 'GET'
                     })
                         // Ajaxリクエストが成功した時発動
