--- a/ajax/1.html
+++ b/ajax/1.html
@@ -3,18 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+    
+    <h2>pre-flight なし</h2>
+    
     <p>DEV</p>
     <form id="form_dev" method="get" accept-charset="utf-8" return false>
     <input type="text" size="300" name="dev_url" id="dev_url"
     value="https://dev.app-adforce.jp/ad/p/r?_site=61038&_article=363984&_link=10358905&dev=1" />
     </form>
-    <button id="send_dev">ajax</button>
+    <button id="send_dev">click</button>
     <br/>
 
     <p>STG</p>
@@ -22,7 +24,7 @@
     <input type="text" size="300" name="stg_url" id="stg_url"
     value="https://stg.app-adforce.jp/ad/p/r?_site=64652&_article=379651&_link=10987467&stg=1" />
     </form>
-    <button id="send_stg">ajax</button>                                                                                      
+    <button id="send_stg">click</button>                                                                                      
     <br/>
 
     <p>PRD</p>
@@ -30,7 +32,7 @@
     <input type="text" size="300" name="prd_url" id="prd_url"
     value="https://c1.app-adforce.jp/ad/p/r?_site=58076&_article=348895&_link=9805550&prd=1" />
     </form>
-    <button id="send_prd">ajax</button>
+    <button id="send_prd">click</button>
     <br/>
 
         <iframe id="result" srcdoc="<html></html>">
