--- a/ajax/and/1.html
+++ b/ajax/and/1.html
@@ -16,7 +16,7 @@
         <input type="text" size="300" name="dev_url" id="dev_url"
                value="https://dev.app-adforce.jp/ad/p/r?_site=61079&_article=364026&_link=10358972&dev=1" />
     </form>
-    <button id="send_dev">ajax</button>
+    <button id="send_dev">click</button>
     <br/>
 
     <p>STG</p>
@@ -24,7 +24,7 @@
         <input type="text" size="300" name="stg_url" id="stg_url"
                value="https://stg.app-adforce.jp/ad/p/r?_site=64654&_article=379654&_link=10987470&stg=1" />
     </form>
-    <button id="send_stg">ajax</button>
+    <button id="send_stg">click</button>
     <br/>
 
     <p>PRD</p>
@@ -32,7 +32,7 @@
         <input type="text" size="300" name="prd_url" id="prd_url"
                value="https://c1.app-adforce.jp/ad/p/r?_site=64924&_article=380632&_link=11017964&prd=1" />
     </form>
-    <button id="send_prd">ajax</button>
+    <button id="send_prd">click</button>
     <br/>
 
         <iframe id="result" srcdoc="<html></html>">
