--- a/io8/rd.html
+++ b/io8/rd.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <script type='text/javascript'>
-      location.replace('tpp://?_xroute=2&_xuid=xfoxGHBtC1hJ9zY&package=jp/app/dong-jingpakupedia/id573435943&referrer=_xroute%3DWA_XUID%26_xuid%3DxfoxGHBtC1hJ9zY');
-      setTimeout(function() { location.replace('http://itunes.apple.com/jp/app/dong-jingpakupedia/id573435943?t=1556082424888'); },  parseInt(new URLSearchParams(window.location.search).get("timeout"))); 
+      location.replace('tpp://app?item=3&another=4&_xroute=2&_xuid=xfoxGL1MT1i4jHa');
+      setTimeout(function() { location.replace(!g('rd') ? location.href + "&rd=1" : u); }, 500); 
     </script>
   </head>
   <body>hello world2</body>
