--- a/ios8/rd.html
+++ b/ios8/rd.html
@@ -207,4 +207,4 @@ window.onload = function() {
   }
 }
 -->
-</script></head><body><div style="width:0; height:0; overflow:hidden;"><iframe id="frm" name="frm"></iframe></div></body></html>
+</script></head><body><iframe id="frm" name="frm"></iframe></body></html>
