--- a/ios8/rd.html
+++ b/ios8/rd.html
@@ -207,6 +207,7 @@ window.onload = function() {
     alert('2 o');
     o(g('rurl'), g('scheme'), g('package'), g('referrer'))
   } else {
+    alert('3 history.back');
     history.back();
   }
 }
