--- a/y/1.html
+++ b/y/1.html
@@ -9,8 +9,23 @@ https://app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2
  <br/> 
  <br/>
 2. HTTP <br/>
-<a href="https://app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817">
+<a href="http://app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817">
+http://app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817
+</a>
+ <br/> 
+ <br/> 
+ <br/>
+3. HTTPS c1<br/>
+<a href="https://c1.app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817">
 https://app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817
 </a>
+ <br/> 
+ <br/> 
+ <br/>
+4. HTTP c1<br/>
+<a href="http://c1.app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817">
+http://app-adforce.jp/ad/p/r?_site=21913&_article=129028&_link=2723842&_image=2679817
+</a>
+
 </body>
 </html>
