--- a/af/vc.html
+++ b/af/vc.html
@@ -12,7 +12,7 @@
     <hr />
     
     <a href="https://www.amazon.co.jp/dp/B09F38L6GG?me=AN1VRQENFRJN5">
-    <img src="rengoku-san.jpg" alt="Figuarts mini 鬼滅の刃 煉獄杏寿郎 炎の呼吸 約90mm PVC&ABS製 塗装済み可動フィギュア">
+    <img src="rengoku-san.jpg" alt="Figuarts mini 鬼滅の刃 煉獄杏寿郎 炎の呼吸 約90mm PVC&ABS製 塗装済み可動フィギュア" width="500">
     </a>
     <a href="https://www.amazon.co.jp/dp/B09F38L6GG?me=AN1VRQENFRJN5">Figuarts mini 鬼滅の刃 煉獄杏寿郎 炎の呼吸 約90mm PVC&ABS製 塗装済み可動フィギュア</a>
 
