--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 Hello World !
 
-<a href="https://www.manga-ai.devboxspace.com/comic"> マンガCRESTRAへ </a>a
+<a href="https://www.manga-ai.devboxspace.com/comic"> マンガCRESTRAへ </a>
 
 
 </html></body>
